--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,15 +30,13 @@ dist.jar=${dist.dir}/car_rental.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.7.jar.zip=C:\\Users\\TIS_2o1\\AppData\\Local\\Temp\\commons-codec-1.7.jar.zip
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.commons-codec-1.7.jar.zip}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
